[tool.poetry]
name = "pytest_container"
version = "0.0.1"
description = "Pytest fixtures for writing container based tests"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "LGPL-2.1-or-later"
packages = [
    { include = "pytest_container", from = "src" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pytest = ">= 3.10"
pytest-testinfra = ">=6.4.0"
dataclasses = { version = ">=0.8", markers="python_version < '3.7'" }

[tool.poetry.dev-dependencies]
black = ">=21.9b0"
mypy = ">=0.910"
pylint = ">=2.10.2"
reorder-python-imports = ">=2.6.0"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.4.0"
Sphinx = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.plugins."pytest11"]
"pytest11.container" = "pytest_container.plugin"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "testinfra"
ignore_missing_imports = true
