[metadata]
name = pytest_container
version = 0.4.3
description = Pytest fixtures for writing container based tests
author = Dan Čermák
author_email = dcermak@suse.com>
url = https://dcermak.github.io/pytest_container/
project_urls =
    Repository = https://github.com/dcermak/pytest_container/
long_description = file: README.rst
license = LGPL-2.1-or-later
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
requires_python = >=3.6.2,<4.0

[options]
packages = find:
install_requires =
    pytest>=3.10
    pytest-testinfra>=6.4.0; python_version < '3.7'
    pytest-testinfra>=7.0; python_version >= '3.7' and python_version < '3.8'
    pytest-testinfra>=8.0; python_version >= '3.8'
    dataclasses>=0.8; python_version < '3.7'
    typing-extensions>=3.0,<4.8; python_version < '3.8'
    typing-extensions>=4.8; python_version <= '3.10' and python_version > '3.7'
    cached-property>=1.5; python_version < '3.8'
    filelock>=3.4
    deprecation>=2.1

[options.entry_points]
pytest11 =
    container = pytest_container.plugin
